Kubernetes-Manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: task
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      imagePullSecrets:
      - name: gitlab-token-auth
      containers:
      - name: task
        image: registry.gitlab.com/tasks6711629/task1/app:v14
        ports:
        - containerPort: 8081
