Kubernetes-Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: task
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
        #ingressClassName: haproxy
  rules:
  - host: "app.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: task-service
            port:
              number: 8081
